fixing breadth search list